tests/ui/serde.stderr
error: you should not implement `visit_string` without also implementing `visit_str`
  --> $DIR/serde.rs:39:5
   |
39 | /     fn visit_string<E>(self, _v: String) -> Result<Self::Value, E>
40 | |         where E: serde::de::Error,
41 | |     {
42 | |         unimplemented!()
43 | |     }
   | |_____^
   |
note: lint level defined here
  --> $DIR/serde.rs:3:9
   |
3  | #![deny(serde_api_misuse)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

